@@ -6,10 +6,6 @@
 ###
 
 # These might become global have to evaluate later.
-#define _GUI_WIDTH_OFFSET
-	142#enddef
-
-# These might become global have to evaluate later.
 #define _GUI_HEIGHT_OFFSET
 	25#enddef
 
@@ -25,9 +21,8 @@
 
 #define __GUI_IMAGE_WIDTH
 ([
-	max_width = screen_width - {_GUI_WIDTH_OFFSET},
 	max_height = screen_height - {_GUI_HEIGHT_OFFSET},
-	best_width = max_width / {__GUI_SIZE_FACTOR},
+	best_width = gamemap_width / {__GUI_SIZE_FACTOR},
 	best_width = if(best_width > max_height, max_height, best_width),
 	if(best_width < 250, 250,
 		if(best_width > 500, 500, best_width))
@@ -39,16 +34,12 @@
 ### The verbose version
 ###
 
-#define __GUI_MAX_WIDTH
-(screen_width - {_GUI_WIDTH_OFFSET})
-#enddef
-
 #define __GUI_MAX_HEIGHT
 (screen_height - {_GUI_HEIGHT_OFFSET})
 #enddef
 
 #define BEST_WIDTH
-({__GUI_MAX_WIDTH} / {__GUI_SIZE_FACTOR})
+(gamemap_width / {__GUI_SIZE_FACTOR})
 #enddef
 
 #define __GUI_BEST_SIZE
@@ -66,7 +57,6 @@
 ([[
 	debug_print('screen_width ', screen_width),
 	debug_print('screen_height ', screen_height),
-	debug_print('__GUI_MAX_WIDTH ', {__GUI_MAX_WIDTH}),
 	debug_print('__GUI_MAX_HEIGHT ', {__GUI_MAX_HEIGHT}),
 	debug_print('BEST_WIDTH ', {BEST_WIDTH}),
 	debug_print('__GUI_BEST_SIZE ', {__GUI_BEST_SIZE})
@@ -299,7 +289,7 @@
 
 		x = 0
 		y = 30
-		width = "(screen_width - 142)"
+		width = "(gamemap_width)"
 		height = "(screen_height - 30)"
 
 		easy_close = "true"
@@ -464,8 +454,8 @@
 
 												[spacer]
 													width = "(
-if(screen_width - (142 + ({__GUI_IMAGE_WIDTH})) > 675
-, screen_width - (142 + ({__GUI_IMAGE_WIDTH}) + 675)
+if(gamemap_width - ({__GUI_IMAGE_WIDTH})) > 675
+, gamemap_width - (({__GUI_IMAGE_WIDTH}) + 675)
 , 0
 ))"
 													height = 75
@@ -509,7 +499,7 @@ if(screen_width - (142 + ({__GUI_IMAGE_WIDTH})) > 675
 
 		x = 0
 		y = 30
-		width = "(screen_width - 142)"
+		width = "(gamemap_width)"
 		height = "(screen_height - 30)"
 
 		easy_close = "true"
@@ -670,8 +660,8 @@ if(screen_width - (142 + ({__GUI_IMAGE_WIDTH})) > 675
 
 												[spacer]
 													width = "(
-if(screen_width - (142 + 10 + ({__GUI_IMAGE_WIDTH})) > 675
-, screen_width - (142 + 10 + ({__GUI_IMAGE_WIDTH}) + 675)
+if(gamemap_width - (10 + ({__GUI_IMAGE_WIDTH})) > 675
+, gamemap_width - (10 + ({__GUI_IMAGE_WIDTH}) + 675)
 , 0
 ))"
 													height = 75
@@ -726,8 +716,6 @@ if(screen_width - (142 + 10 + ({__GUI_IMAGE_WIDTH})) > 675
 #undef ___GUI_IMAGE_WIDTH
 #undef __GUI_BEST_SIZE
 #undef __GUI_MAX_HEIGHT
-#undef __GUI_MAX_WIDTH
 #undef __GUI_SIZE_FACTOR
 #undef _GUI_HEIGHT_OFFSET
-#undef _GUI_WIDTH_OFFSET
 
