@@ -10,6 +10,7 @@ Version 1.5.13+svn:
      (bug #13126)
    * Fixed bug #13161: Inactive weapon special name and description not used
    * Fixed bug #13123: When you're downloading add-ons they do not appear in
+   * The size of the message dialogs now really depends on the size of the map
      campaigns list until BfW restarted
  * Miscellaneous and bug fixes:
    * Fix another campaign replay bug (#13139)
